# Analisis-Rendimiento-Escolar-2002-2024

./: pyproject.toml  requirements.txt
