[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
